# FarewellToKing

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  FarewellToKing.c  FarewellToKing.h  FarewellToKingBoard.c  FarewellToKingBoard.h  FarewellToKingDef.h  FarewellToKingMask.c  FarewellToKingMask.h  FarewellToKingStr.c  FarewellToKingStr.h  FarewellToKingTest.c  README.md  README.txt  flyByKnightLib.c  flyByKnightLib.h  flyByKnightLibBoard.c  flyByKnightLibBoard.h  flyByKnightLibDef.h  flyByKnightLibMask.c  flyByKnightLibMask.h  flyByKnightLibStr.c  flyByKnightLibStr.h  flyByKnightLibTest.c  makefile
include/: FarewellToKing.h  FarewellToKingBoard.h  FarewellToKingDef.h  FarewellToKingMask.h  FarewellToKingStr.h  farewell_to_king.h  farewell_to_king_bitops.h  farewell_to_king_board.h  farewell_to_king_hash.h  farewell_to_king_hash_polyglot_book.h  farewell_to_king_mask.h  farewell_to_king_strings.h  farewell_to_king_types.h  farewell_to_king_version.h
src/: CMakeLists.txt  FarewellToKing.c  FarewellToKingBoard.c  FarewellToKingMask.c  FarewellToKingStr.c  farewell_to_king.c  farewell_to_king_bitops.c  farewell_to_king_board.c  farewell_to_king_hash.c  farewell_to_king_hash_polyglot_book.c  farewell_to_king_mask.c  farewell_to_king_polyglot_book.c  farewell_to_king_strings.c
test/: CMakeLists.txt  FarewellToKingTest.c  farewell_to_king_test.c  fischer-spassky_1972_game6.ftk_key  fischer-spassky_1972_game6.ftk_test
